--- a/styles.css
+++ b/styles.css
@@ -6,33 +6,51 @@
 
 
 body {
-    font-family: 'Funnel Display', sans-serif; /* Use Funnel Display font *//* Use Google Font */
+    font-family: 'Funnel Display', sans-serif;
+    /* Use Funnel Display font */
+    /* Use Google Font */
     line-height: 1.6;
-    padding-top: 60px; /* Add padding to body to account for fixed navbar height */
+    padding-top: 60px;
+    /* Add padding to body to account for fixed navbar height */
 
 }
 
+body li { 
+    margin-bottom: 0;
+    padding: 0;
+}
+
+
+p {
+    color:#555;
+}
+
+h {
+    color: #1e1e1e;;
+}
 /* Navigation Styles */
 .navbar {
-    background-color: #333;
-    color: #fff;
+    background-color: #f4f4f4;
+    color: #;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1rem 2rem;
-    position: fixed; /* Change to fixed positioning */
+    position: fixed;
+    /* Change to fixed positioning */
     top: 0;
     left: 0;
     right: 0;
     z-index: 1000;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    height: 60px; /* Set a fixed height for the navbar */
+    height: 72px;
+    ;
+    /* Set a fixed height for the navbar */
 }
 
 .logo {
     font-size: 1.5rem;
     font-weight: bold;
-    display:flex;
+    display: flex;
 }
 
 .nav-menu {
@@ -42,15 +60,20 @@ body {
 
 .nav-menu li {
     margin-left: 2rem;
+    align-items: center;
+    justify-content: center;
 }
 
 .nav-menu a {
-    color: #fff;
+    color: #333;
     text-decoration: none;
     transition: color 0.3s ease;
+    align-items: center;
+    justify-content: center;
 }
 
-.nav-menu a:hover, .nav-menu a:focus {
+.nav-menu a:hover,
+.nav-menu a:focus {
     color: #949494;
 }
 
@@ -64,7 +87,7 @@ body {
     width: 25px;
     height: 3px;
     margin: 5px auto;
-    background-color: #fff;
+    background-color: #333;
     transition: all 0.3s ease-in-out;
 }
 
@@ -83,7 +106,7 @@ body {
     max-width: 1200px;
     width: 100%;
     display: flex;
-    margin:auto;
+    margin: auto;
 }
 
 
@@ -113,7 +136,8 @@ body {
     transition: background-color 0.3s ease;
 }
 
-.cta-button:hover, .cta-button:focus {
+.cta-button:hover,
+.cta-button:focus {
     background-color: #555;
 }
 
@@ -123,8 +147,8 @@ body {
 }
 
 .hero-image img {
-    max-width: 100%;
-    height: auto;
+    width: auto;
+    height: 100%;
 }
 
 /* Global Page Wrapper*/
@@ -133,7 +157,7 @@ body {
     max-width: 1264px;
     width: 100%;
     margin: 0 auto;
-    padding:0 2rem;
+    padding: 0 2rem;
     box-sizing: border-box;
 
 
@@ -142,8 +166,8 @@ body {
 /* Project Showcase Styles */
 
 .showcase-container {
-    margin-left:32px;
-    margin-right:32px;
+    margin-left: 32px;
+    margin-right: 32px;
 }
 
 .project-showcase {
@@ -153,8 +177,7 @@ body {
     max-width: 1200px;
     width: 100%;
     margin: 2rem auto;
-    padding: 0 2rem;
-    border-radius: 0.5rem;
+    border-radius: 1rem;
     background: #FFF;
     box-shadow: 0px 12px 16px 0px rgba(0, 0, 0, 0.08);
 
@@ -162,8 +185,8 @@ body {
 
 .project-info {
     flex: 1;
-    padding-right: 40px;
-    padding-left: 5rem;
+    padding-right: 1rem;
+    padding-left: 1rem;
     padding-top: 5rem;
     padding-bottom: 5rem;
 }
@@ -173,7 +196,8 @@ body {
     margin-bottom: 10px;
 }
 
-.project-year, .project-role {
+.project-year,
+.project-role {
     font-size: 16px;
     margin-bottom: 5px;
 }
@@ -189,29 +213,38 @@ body {
     transition: background-color 0.3s ease;
 }
 
-.project-cta:hover, .project-cta:focus {
+.project-cta:hover,
+.project-cta:focus {
     background-color: #0056b3;
 }
 
 .project-image {
     flex: 1;
-    max-width: 50%;
+    background-color: #fff;
+    max-width: none;
+    max-height: none;
+    margin: 0 auto;
+    display: block;
+    position: static;
+    overflow: auto;
 }
 
 .project-image img {
-    width: 100%;
-    height: auto;
+    height: 400px;
+  width: 100%;
+  object-fit: cover;
 }
 
 /* Media Queries */
 @media (max-width: 768px) {
+
     /* Navigation Mobile Styles */
     .nav-menu {
         position: fixed;
         left: -100%;
         top: 3.75rem;
         flex-direction: column;
-        background-color: #333;
+        background-color: #fff;
         width: 100%;
         text-align: center;
         transition: 0.3s;
@@ -265,6 +298,7 @@ body {
     .project-info {
         padding-right: 0;
         margin-bottom: 20px;
+        flex:1;
     }
 
     .project-image {
@@ -274,109 +308,190 @@ body {
     .page-wrapper {
         width: 100%;
         margin: 0 auto;
-        padding:0 rem;
+        padding: 0 rem;
         box-sizing: border-box;
 
     }
 }
 
 
-    /* Footer Section */
+/* Footer Section */
 
 
 .footer {
-    background-color: #000; /* Black background */
-    color: #fff; /* White text */
+    background-color: #000;
+    /* Black background */
+    color: #fff;
+    /* White text */
     padding: 3rem 0 1rem;
     font-family: 'Funnel Display', sans-serif;
-  }
-  
-  .footer-content {
+}
+
+.footer-content {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 2rem;
-  }
-  
-  .footer-section {
+}
+
+.footer-section {
     flex: 1;
     margin-bottom: 2rem;
     min-width: 250px;
-  }
-  
-  .footer-section h3 {
+}
+
+.footer-section h3 {
     font-size: 1.2rem;
     margin-bottom: 1rem;
-  }
-  
-  .footer-section p {
+}
+
+.footer-section p {
     margin-bottom: 1rem;
-  }
-  
-  .social-icons a {
-    color: #fff; /* White icons */
+}
+
+.social-icons a {
+    color: #fff;
+    /* White icons */
     font-size: 1.5rem;
     margin-right: 1rem;
     transition: color 0.3s ease;
+}
+
+.social-icons a:hover {
+    color: #007bff;
+    /* Change to blue on hover */
+}
+
+.footer-section.links ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.footer-section.links li {
+    margin-bottom: 0.5rem;
+}
+
+.footer-section.links a {
+    color: #fff;
+    /* White links */
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.footer-section.links a:hover {
+    color: #007bff;
+    /* Change to blue on hover */
+}
+
+.footer-section.contact i {
+    margin-right: 0.5rem;
+}
+
+.footer-bottom {
+    text-align: center;
+    padding-top: 2rem;
+    border-top: 1px solid #555;
+    /* Dark gray border */
+}
+
+@media (max-width: 768px) {
+    .footer-content {
+        flex-direction: column;
+        align-items: center;
+        /* Center items on smaller screens */
+        padding: 0;
+        /* Remove padding on smaller screens for better spacing */
+        width: calc(100% - 4rem);
+        /* Adjust width for smaller screens */
+        margin-left: aut1reo;
+        margin-right: auto;
+        max-width: none;
+        /* Remove max-width for stacking */
+        box-sizing: border-box;
+        /* Ensure padding is included in width */
+    }
+
+    .footer-section {
+        margin-bottom: 2rem;
+    }
+}
+
+@media (max-width: 768px) {
+    .page-wrapper {
+        padding: 0 1rem;
+    }
+
+    .navbar {
+        padding: 0 1rem;
+    }
+}
+
+
+.about-wrapper {
+    display: flex;
+    gap:4rem;
+    margin-top: 8rem;
+    margin-bottom: 8rem;
+    align-items: center;
+}
+
+
+.skills-tools {
+    background-color: #333333;
+    color: white;
   }
   
-  .social-icons a:hover {
-    color: #007bff; /* Change to blue on hover */
+  .container {
+    max-width: 1264px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
   
-  .footer-section.links ul {
+  .about-list-column {
+    flex-basis: calc(50% - 20px);
+    margin-bottom: 20px;
+  }
+  
+  h2 {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+  
+  ul {
     list-style-type: none;
     padding: 0;
   }
   
-  .footer-section.links li {
-    margin-bottom: 0.5rem;
-  }
-  
-  .footer-section.links a {
-    color: #fff; /* White links */
-    text-decoration: none;
-    transition: color 0.3s ease;
-  }
-  
-  .footer-section.links a:hover {
-    color: #007bff; /* Change to blue on hover */
-  }
-  
-  .footer-section.contact i {
-    margin-right: 0.5rem;
-  }
-  
-  .footer-bottom {
-    text-align: center;
-    padding-top: 2rem;
-    border-top: 1px solid #555; /* Dark gray border */
+  li {
+    margin-bottom: 10px;
+    font-size: 16px;
   }
   
   @media (max-width: 768px) {
-    .footer-content {
-      flex-direction: column;
-      align-items: center; /* Center items on smaller screens */
-      padding: 0; /* Remove padding on smaller screens for better spacing */
-      width: calc(100% - 4rem); /* Adjust width for smaller screens */
-      margin-left: aut1reo; 
-      margin-right: auto; 
-      max-width: none; /* Remove max-width for stacking */
-      box-sizing: border-box; /* Ensure padding is included in width */
-     }
-  
-     .footer-section {
-       margin-bottom: 2rem; 
-     }
+    .column {
+      flex-basis: 100%;
     }
 
-     @media (max-width: 768px) {
-        .page-wrapper {
-            padding: 0 1rem;
-        }
-        .navbar {
-            padding: 0 1rem;
-        }
+    .about-wrapper {
+        flex-direction: column;
+    }
+  }
+
+
+  .about-img {
+    border-radius: 2rem;
+    max-width: 100%;
+    height: auto;
+    min-width: 300px;
+
+
+  }
+
+
+  html {
+    scroll-behavior: smooth;
   }
