--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
     /* Use Funnel Display font */
     /* Use Google Font */
     line-height: 1.6;
-    padding-top: 60px;
+   /* padding-top: 60px;
     /* Add padding to body to account for fixed navbar height */
 
 }
@@ -36,7 +36,6 @@ h {
     justify-content: space-between;
     align-items: center;
     padding: 1rem 2rem;
-    position: fixed;
     /* Change to fixed positioning */
     top: 0;
     left: 0;
