--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,12 @@ body li {
     padding: 0;
 }
 
+a:link, a:visited, a:hover, a:active {
+    text-decoration: none;
+    color: #000000; /* Replace with your desired color */
+
+}
+
 
 p {
     color:#555;
