--- a/styles.css
+++ b/styles.css
@@ -138,18 +138,23 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .cta-button {
-    display: inline-block;
-    background-color: #333;
-    color: #fff;
-    padding: 0.7rem 1.5rem;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
+          display:inline-block;
+           padding: 10px 20px;
+           background-color: #f1f1f1;
+            border: 2px solid black;
+            font-size: 16px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+          transition: background-color 0.3s ease;
+          transition: 0.5s;
+
 }
 
 .cta-button:hover,
 .cta-button:focus {
-    background-color: #555;
+    transform: translate(-8px, -8px);
+          box-shadow: 8px 8px 0 0 black;
+          transition: 0.5s;
 }
 
 .hero-image {
